# server

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  test.yml
server/: db.py  hasher.py  logger.py  main.py  settings.py
server/routers/: online_users.py  status.py  ws.py
server/schemas/: status.py  ws.py
tests/: conftest.py  test_hasher.py  test_main.py  test_settings.py  test_status_endpoint.py  test_websocket_endpoint.py
tests/test_routers/: test_online_users.py  test_ws.py
