[project]
name = "server"
version = "0.0.1.dev1"
description = ""
authors = [
    {name = "Henrique Sebastião",email = "contato@henriquesebastiao.com"}
]
readme = "README.md"
requires-python = ">=3.14.2,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.2,<0.117.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "redis[async] (>=6.4.0,<7.0.0)",
    "confy-addons (>=1.2.0,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
taskipy = "^1.14.1"
radon = "^6.0.1"
bandit = "^1.9.3"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mypy = "^1.19.1"
pytest-asyncio = "^1.3.0"
pydantic-core = "^2.41.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'D', 'UP', 'PERF']
extend-ignore = ["E501", "D203", "D212"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"main.py" = ['PLR0912']
"__init__.py" = ['D104']
"tests/*.py" = ['D103', 'D100', 'PLR2004']
"server/schemas/*.py" = ['D101', 'D100']
"server/routers/status.py" = ['D100']
"settings.py" = ['D103', 'D101', 'D100']
"db.py" = ['D100']
"hasher.py" = ['D100']
"online_users.py" = ['D100']
"ws.py" = ['PLR0912']
"test_main.py" = ['PLW0108']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = 'auto'

[tool.taskipy.tasks]
run = 'poetry run uvicorn --reload --host 127.0.0.1 server.main:app'
lint = 'poetry run ruff check .; ruff check . --diff'
format = 'poetry run ruff format .; ruff check . --fix'
mypy = 'poetry run mypy -p server -p tests --ignore-missing-imports'
radon = 'poetry run radon cc ./server -a -na'
bandit = 'poetry run bandit -r ./server'
export = './scripts/rm-requirements.sh && poetry export -f requirements.txt --output requirements.txt --without-hashes --without dev'
pre_test = 'poetry run ruff check . -q; poetry run ruff check . --diff -q; poetry run mypy -p server -p tests --ignore-missing-imports; poetry run radon cc ./server -a -na; poetry run bandit -r ./server;'
test = 'poetry run pytest -s -x --cov=server -vv'
post_test = 'coverage html'
